# LAMMPS_file_dicer

./: .gitignore  CMakeLists.txt  README.md  head.txt  main.cpp  reader.h  requirements.txt  sliceplot.py
